modules/echo/echo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    konghq.com/host-aliases: "kong-kong-proxy.kong.svc.cluster.local"
  labels:
    app: echo
spec:
  ingressClassName: kong
  rules:
    - host: localhost
      http:
        paths:
          - path: /echo
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo
                port:
                  number: 8080
